B Venkatesh: 19 Fixes